--- a/app/views/top/login_check.html.slim
+++ b/app/views/top/login_check.html.slim
@@ -3,3 +3,4 @@ h1 Top#login_check
 p Find me in app/views/top/login_check.html.slim
 = @msg
 = link_to '&lt;&lt;go back'.html_safe, {action:'index'}
+= link_to 'ディスカッション一覧', discussions_path, class:'nav-link'
