--- a/app/views/discussions/show.html.slim
+++ b/app/views/discussions/show.html.slim
@@ -1,2 +1,34 @@
 h1 Discussions#show
 p Find me in app/views/discussions/show.html.slim
+.nav.justify-content-end
+= link_to '一覧', discussions_path, class: 'nav-link'
+= link_to '編集', edit_discussion_path, class: 'btn btn-@primary mr-3'
+= link_to '削除', @discussion, method: :delete, data: { confirm: "タスク「#{@discussion.theme}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
+table.table.table-hover
+ tbody
+   tr
+     th = Discussion.human_attribute_name(:id)
+     td = @discussion.id
+   tr
+     th = Discussion.human_attribute_name(:theme)
+     td = @discussion.theme
+   tr
+     th = Discussion.human_attribute_name(:description)
+     td = simple_format(h(@discussion.description),{}, sanitize:false, wrapper_tag: "div")
+   tr         
+     th = Discussion.human_attribute_name(:created_at)
+     td = @discussion.created_at
+   tr         
+     th = Discussion.human_attribute_name(:updated_at)
+     td = @discussion.updated_at
+h2 class= "h4 text-primary" 'これまで寄せられたコメント'
+  ul class= "list-group"
+    if @discussion.comment.count == 0 then 
+    p class= "comment" 'まだありません。'
+    else 
+    @discussion.comment.reverse_each do |re|
+    li class= "list-group-item"
+      re.content + '(' + re.name + ')'
+    end
+   end
+  ul
