--- a/app/views/comments/edit.html.slim
+++ b/app/views/comments/edit.html.slim
@@ -1,2 +1,16 @@
 h1 Comments#edit
 p Find me in app/views/comments/edit.html.slim
+.nav.jsutify-content-end
+= link_to '詳細', @comment
+= link_to '一覧', comments_path, class:'nav-link'
+
+
+= form_with(model: [@comment.discussion, @comment], local: true) do |f| 
+ .form-group
+ = f.label :content
+ = f.text_area :content, class: 'form-control', id: 'comment_content' 
+
+ .form-action
+ = f.submit nil, class: 'btn btn-primary' 
+ 
+ = link_to 'Back', discussion_path(@comment.discussion_id)
