--- a/app/views/comments/new.html.slim
+++ b/app/views/comments/new.html.slim
@@ -1,9 +1,9 @@
 h1 Comments#new
 p Find me in app/views/comments/new.html.slim
 .nav.jsutify-content-end
-= link_to '一覧', discussions_path, class:'nav-link'
+= link_to '一覧', discussions_path(@discussion), class:'nav-link'
 
-= form_with model: @comment, local: true do |f| 
+= form_with(model: [@discussion, @comment], local: true) do |f| 
  .form-group
  = f.label :content
  = f.text_area :content, class: 'form-control', id: 'comment_content' 
