--- a/app/views/comments/show.html.slim
+++ b/app/views/comments/show.html.slim
@@ -1,5 +1,5 @@
-p id = "notice", = notice
-p.strong Content: = @comment.content
-= link_to 'Edit', edit_discussion_comment_path(@comment)
-= link_to 'Back', discussion_path(@comment.discussion_id)
-= link_to 'Delete', discussion_comment_path(@comment), method: :delete, data: { confirm: '削除します。よろしいですか?' }
+p.Content: = @comment.present?
+
+= link_to 'Edit', edit_discussion_comment_path
+= link_to 'Back', discussion_path
+= link_to 'Delete', discussion_comment_path, method: :delete, data: { confirm: '削除します。よろしいですか?' }
