--- a/app/views/discussions/edit.html.slim
+++ b/app/views/discussions/edit.html.slim
@@ -1,5 +1,5 @@
-h1 Discussions#edit
-p Find me in app/views/discussions/edit.html.slim
+h1 ディスカッションテーマ編集
+p 自分のコメントを修正する
 .nav.jsutify-content-end
 = link_to '一覧', discussions_path, class:'nav-link'
 
