--- a/app/views/discussions/new.html.slim
+++ b/app/views/discussions/new.html.slim
@@ -1,5 +1,5 @@
-h1 Discussions#new
-p Find me in app/views/discussions/new.html.slim
+h1 ディスカッションテーマ登録
+p あなたの関心あるテーマを投稿しましょう
 .nav.jsutify-content-end
 = link_to '一覧', discussions_path, class:'nav-link'
 
