--- a/app/views/top/login_check.html.slim
+++ b/app/views/top/login_check.html.slim
@@ -1,6 +1,6 @@
-h1 Top#login_check
+h1 ようこそ
 = @member.email
-p Find me in app/views/top/login_check.html.slim
-= @msg
-= link_to '&lt;&lt;go back'.html_safe, {action:'index'}
-= link_to 'ディスカッション一覧', discussions_path, class:'nav-link'
+p ログインが完了しました。
+
+= link_to '&lt;&lt;戻る'.html_safe, {action:'index'}
+= link_to 'ディスカッション一覧', discussions_path, class:'nav-link', class: 'btn btn-primary'
