--- a/app/views/comments/edit.html.slim
+++ b/app/views/comments/edit.html.slim
@@ -1,9 +1,9 @@
 h1 Comments#edit
 p Find me in app/views/comments/edit.html.slim
 .nav.jsutify-content-end
-= link_to '一覧', comment_path, class:'nav-link'
+= link_to 'コメント詳細へ戻る', edit_discussion_comment_path, class:'nav-link'
 
-= form_with(model: [@comment.discussion, @comment], local: true) do |f| 
+= form_with model: [@discussion, @comment] do |f| 
  .form-group
  = f.label :content
  = f.text_area :content, class: 'form-control', id: 'comment_content' 
@@ -11,4 +11,4 @@ p Find me in app/views/comments/edit.html.slim
  .form-action
  = f.submit nil, class: 'btn btn-primary' 
  
- = link_to '戻る', discussion_path(@comment.discussion_id)
+ = link_to 'ディスカッション画面へ戻る', discussion_path(@comment.discussion_id)
