--- a/app/views/comments/new.html.slim
+++ b/app/views/comments/new.html.slim
@@ -1,5 +1,5 @@
-h1 Comments#new
-p Find me in app/views/comments/new.html.slim
+h1 コメント登録
+p テーマについて自由にコメントしよう
 .nav.jsutify-content-end
 = link_to '一覧', discussions_path(@discussion), class:'nav-link'
 
