--- a/app/views/discussions/index.html.slim
+++ b/app/views/discussions/index.html.slim
@@ -1,14 +1,14 @@
-h1 Discussions#index
-p Find me in app/views/discussions/index.html.slim
+h1 ディスカッションページ
+p ディスカッションテーマ一覧
 = link_to '新規登録', new_discussion_path, class: 'btn btn-primary'
 = link_to 'ログアウト', destroy_member_session_path, method: :delete
 .mb-3
 table.table.table-hover
   thead.thead-default
     tr 
-      th = Discussion.human_attribute_name(:theme)
-      th = Discussion.human_attribute_name(:description)
-      th = Discussion.human_attribute_name(:created_at)
+      th = Discussion.human_attribute_name(:テーマ)
+      th = Discussion.human_attribute_name(:内容)
+      th = Discussion.human_attribute_name(:作成日時)
       th 
   tbody
    - @discussions.each do |discussion|
