--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
     <p class="alert"><%= alert %></p>
     <%= render "layouts/header" %>
     　<div class="container">
+    <%= render "layouts/flash" %>
       　<%= yield %>
     　</div>
     </main>
