--- a/app/views/discussions/show.html.slim
+++ b/app/views/discussions/show.html.slim
@@ -1,27 +1,21 @@
-h1 ディスカッションテーマ詳細画面
-p テーマ詳細についてコメントしてね
+h1 テーマ詳細についてコメントしてね
 .nav.justify-content-end
-= link_to '一覧', discussions_path, class: 'nav-link'
-= link_to '編集', edit_discussion_path, class: 'btn btn-@primary mr-3'
-= link_to '削除', @discussion, method: :delete, remote: true, data: { confirm: "タスク「#{@discussion.theme}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
-= link_to 'コメントする', new_discussion_comment_path(@discussion) 
+= link_to '一覧', discussions_path, class: 'btn btn-primary mr-3'
+= link_to '編集', edit_discussion_path, class: 'btn btn-primary mr-3'
+= link_to '削除', @discussion, method: :delete, remote: true, data: { confirm: "タスク「#{@discussion.theme}」を削除します。よろしいですか？" }, class: 'btn btn-danger delete'
+= link_to 'コメントする', new_discussion_comment_path(@discussion), class: 'btn btn-primary ml-3'
 table.table.table-hover
  tbody
-   tr
-     th = Discussion.human_attribute_name(:id)
-     td = @discussion.id
    tr
      th = Discussion.human_attribute_name(:テーマ)
      td = @discussion.theme
    tr
      th = Discussion.human_attribute_name(:内容)
-     td = simple_format(h(@discussion.description),{}, sanitize:false, wrapper_tag: "div")
+     td = simple_format(h(@discussion.description),{}, sanitize:false, wrapper_tag: "div", class: 'form-control')
    tr         
-     th = Discussion.human_attribute_name(:作成日時)
-     td = @discussion.created_at
-   tr         
-     th = Discussion.human_attribute_name(:更新日時)
-     td = @discussion.updated_at
+     th = Discussion.human_attribute_name(:掲載日時)
+     td = l @discussion.created_at, format: :long
 - if @discussion.comments.present? 
    - @discussion.comments.each do |comment|
      li = link_to comment.content, discussion_comment_path(@discussion, comment)
+     = link_to 'メンバー名', member_show_path
