--- a/app/views/comments/edit.html.slim
+++ b/app/views/comments/edit.html.slim
@@ -1,7 +1,7 @@
 h1 Comments#edit
 p Find me in app/views/comments/edit.html.slim
 .nav.jsutify-content-end
-= link_to 'コメント詳細へ戻る', edit_discussion_comment_path, class:'nav-link'
+= link_to 'コメント詳細へ戻る', discussion_comment_path, class:'nav-link'
 
 = form_with model: [@discussion, @comment] do |f| 
  .form-group
