--- a/app/views/discussions/show.html.slim
+++ b/app/views/discussions/show.html.slim
@@ -4,17 +4,20 @@ h1 テーマ詳細についてコメントしてね
 = link_to '編集', edit_discussion_path(@discussion), class: 'btn btn-primary mr-3'
 = link_to '削除', @discussion, method: :delete, remote: true, data: { confirm: "タスク「#{@discussion.theme}」を削除します。よろしいですか？" }, class: 'btn btn-danger delete'
 = link_to 'コメントする', new_discussion_comment_path(@discussion), class: 'btn btn-primary ml-3'
-table.table.table-hover
- tbody
-   tr
-     th = Discussion.human_attribute_name(:テーマ)
-     td = @discussion.theme
-   tr
-     th = Discussion.human_attribute_name(:内容)
-     td = simple_format(h(@discussion.description),{}, sanitize:false, wrapper_tag: "div", class: 'form-control')
-   tr         
-     th = Discussion.human_attribute_name(:掲載日時)
-     td = l @discussion.created_at, format: :long
-- if @discussion.comments.present? 
-   - @discussion.comments.each do |comment|
-     li = link_to comment.content, discussion_comment_path(@discussion, comment)
+
+table.table.table-hover 
+  tbody
+    tr
+      th = Discussion.human_attribute_name(:テーマ)
+      td = @discussion.theme
+    tr
+      th = Discussion.human_attribute_name(:内容)
+      td = simple_format(h(@discussion.description),{}, sanitize:false, wrapper_tag: "div", class: 'form-control')
+    tr         
+      th = Discussion.human_attribute_name(:掲載日時)
+      td = l @discussion.created_at, format: :long
+    - if @discussion.comments.present? |
+       - @discussion.comments.each do |comment|
+        tr
+          td = link_to comment.content, discussion_comment_path(@discussion, comment)
+          td = link_to comment.member&.name || '匿名'
